# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/Localizer--main--1.1
#

2005-05-03 10:09:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-31

    Summary:
      fix "LPM.get_available_languages" when property is empty
    Revision:
      Localizer--main--1.1--patch-31


    modified files:
     Changelog LocalPropertyManager.py


2005-04-11 14:13:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-30

    Summary:
      fix release date
    Revision:
      Localizer--main--1.1--patch-30


    modified files:
     Changelog RELEASE-1.1.0.txt.en


2005-04-11 09:47:34 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29

    Summary:
      release notes, fix english, by Chris H.
    Revision:
      Localizer--main--1.1--patch-29


    modified files:
     Changelog RELEASE-1.1.0.txt.en


2005-04-10 16:54:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28

    Summary:
      get ready to release 1.1.0
    Revision:
      Localizer--main--1.1--patch-28


    modified files:
     CHANGES.txt Changelog RELEASE-1.1.0.txt.en


2005-04-07 12:29:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27

    Summary:
      spell check the press release
    Revision:
      Localizer--main--1.1--patch-27


    modified files:
     Changelog RELEASE-1.1.0.txt.en


2005-04-07 12:18:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26

    Summary:
      finish first draft of the press release
    Revision:
      Localizer--main--1.1--patch-26


    modified files:
     Changelog RELEASE-1.1.0.txt.en


2005-04-06 18:19:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25

    Summary:
      getting ready to release 1.1.0 (not finished yet)
    Revision:
      Localizer--main--1.1--patch-25


    modified files:
     CHANGES.txt Changelog README.txt RELEASE-1.1.0.txt.en
     version.txt

    renamed files:
     .arch-ids/RELEASE-0.9.0.txt.id
       ==> old/.arch-ids/RELEASE-0.9.0.txt.id
     .arch-ids/RELEASE-0.9.1.txt.en.id